syntax = "proto3";
package database;

import "google/protobuf/timestamp.proto";

option go_package = "/pb";

message User {
    // Version 1
    string id = 1;
    string username = 2;
    string password = 3;

    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message Mailbox {
    string id = 1;
    string user_id = 2;
    uint32 uid_validity = 3;
    string name = 4;
    bool subscribed = 5;
    
	google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message Message {
    uint32 uid = 1;
    string hash = 2;
    string mailbox_id = 3;
    uint64 size = 4;
    map<string, bool> flags = 5;

	google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message MessageHeader {
    string header = 1;
    string value = 2;
}